--- a/Develop/style.css
+++ b/Develop/style.css
@@ -42,6 +42,12 @@ header {
   padding: 30px 40px;
 }
 
+.criteria {
+  text-align: center;
+  letter-spacing: 1.5px;
+  padding: 25px;
+}
+
 .card-header::after {
   content: " ";
   display: block;
